--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@ html, body {
   z-index: 10;
 }
 
+
+
+@media screen and (max-width: 768px) {
+  #mobile-controls {
+    gap: 8vw; /* Increased gap for mobile screens */
+  }
+}
+
+
+
+
 #mobile-controls button {
   width: 15vw; /* Dynamic size for buttons */
   max-width: 100px; /* Limit size for larger screens */
