--- a/index.html
+++ b/index.html
@@ -114,9 +114,22 @@ html, body {
 
 
 @media screen and (max-width: 768px) {
+
+
   #mobile-controls {
     gap: 8vw; /* Increased gap for mobile screens */
   }
+
+
+
+  #mobile-controls button {
+    width: 20vw; /* Larger button size for mobile screens */
+    height: 20vw;
+    font-size: calc(2em + 2%); /* Increase font size proportionally */
+  }
+
+
+
 }
 
 
