--- a/index.html
+++ b/index.html
@@ -130,9 +130,15 @@ html, body {
   border: none;
   border-radius: 50%;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+
+
+  
   touch-action: manipulation; /* Prevents default behaviors on long-press */
   user-select: none; /* Prevents text selection */
   -webkit-user-select: none;
+
+  -ms-user-select: none;
+  -moz-user-select: none;
 }
 
 
